internal/dataplane/parser/testdata/golden/httproute-example/expression-routes-on_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: httproute..httproute-testing._.0
  name: httproute..httproute-testing._.0
  port: 8080
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - expression: (http.path == "/httproute-testing") || (http.path ^= "/httproute-testing/")
    https_redirect_status_code: 426
    name: httproute..httproute-testing._.0.0
    preserve_host: true
    priority: 2251808940752895
    strip_path: true
    tags:
    - k8s-name:httproute-testing
    - k8s-kind:HTTPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1beta1
  tags:
  - k8s-name:httproute-testing
  - k8s-kind:HTTPRoute
  - k8s-group:gateway.networking.k8s.io
  - k8s-version:v1beta1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: httproute..httproute-testing._.0
  tags:
  - k8s-name:httproute-testing
  - k8s-kind:HTTPRoute
  - k8s-group:gateway.networking.k8s.io
  - k8s-version:v1beta1
